# backend-guia

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  start.bat  start.sh
app/: config.py  main.py
app/api/routes/: upload.py
app/models/: sadt.py
app/services/: extractor.py  gemini_service.py  ocr_service.py  pdf_parser.py
backend-guia/: README.md
