[tool.poetry]
name = "meu-projeto-guia"
version = "0.1.0"
description = "Backend da aplicação FastAPI"
authors = ["Joaquim Brasiliano Gonçalves <joaquimbrasiliano.g@gmail.com>", "Sarah Mota Silva <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "0.115.5"
uvicorn = {extras = ["standard"], version = "0.32.1"}
python-multipart = "0.0.20"
pdfplumber = "0.11.4"
PyMuPDF = "1.24.14"
pytesseract = "0.3.13"
Pillow = "11.0.0"
google-generativeai = "0.8.3"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
python-dotenv = "1.0.1"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"